# python-exercises

./: .gitignore  README.md  requirements.txt
01-data-structures/: ex01_string.py  ex02_list.py  ex03_dictionary.py  ex04_tuple.py  ex05_set.py
02-operators/: ex01_chaining.py
03-control-flow/: ex01_conditionals.py  ex02_for_loops.py  ex03_while_loops.py  ex04_for_loops_1.py
04-functions/: ex01_definition.py  ex02_parameters.py  ex03_return_value.py  ex04_math.py  ex05_boolean.py  ex06_comparison.py  ex07_args.py  ex08_list_filter.py  ex09_find_max.py
05-object-orientation-programming/: ex01_class_design.py
06-modules/: README.md  main.py  pyproject.toml
06-modules/mylibrary/: library.py
07-error-handling/: ex01_exception.py
08-decorators/: ex01_decorators.py
09-generators/: README.md  dice_manager.py  game.py
10-web-scraping/: ex01_wscraping.py
11-image-processing/: README.md  decoder.py  encoder.py
12-file-io/: ex01_csv.py  input.csv
13-final-project/todo-list/: Pipfile  README.md  app.py  pyproject.toml
13-final-project/todo-list/tests/: conftest.py
13-final-project/todo-list/tests/unit/: test_todo.py
13-final-project/todo-list/todo/: todo.py
