[project]
name = "mylibrary"
version = "0.1.0"
description = "A simple library management system"
authors = [
  { name="Sadjad Bahari", email="sajad_bahari@rocketmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mylibrary"]
